--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
         <div class="landing">
             <div class="container">
                 <div class="content">
-                    <h2>Traitement de tout sort de nuisible 7j/7</h2>
-                    <p>Votre confort est notre but nous nous déplaçons partout dans le Nord - Aisne - Oise - Pas-de-calais - Somme.
-                        Intervention 24h/24 7/7 Rapide est efficace n'histez pas de prendre <a href="#contact">contact</a>et dite Nous votre problem ou appelez nous direct à <span class="numero">06 58 01 10 58</span></p>
+                    <h2>Traitements de tous nuisibles 7j/7</h2>
+                    <p>Votre confort est notre priorité, c'est pourquoi nous intervenons dans le Nord-pas-de-calais, l'Aisne, l'Oise et la Somme 24h/24.
+                        Pour un devis gratuit, contactez-nous direct à <span class="numero">06 58 01 10 58</span></p>
                     <div class="devis">
                         <a href="#devis">Faire un DEVIS</a>
                     </div>
@@ -92,7 +92,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                     <i class="fa-solid fa-house-chimney fa-2x"></i>
                     <div class="info">
                         <h3>Efficacité</h3>
-                        <p>Nous pouvons vous assurer que notre traitement est efficace à 100% et la fin de vos ennuis</p>
+                        <p>Nous pouvons vous assurer que notre traitement est efficace à 100%.</p>
                         <span> 5/5 &#11088; &#11088; &#11088; &#11088; &#11088;</span>
                     </div>
                     <img src="./Images/efficacity.png" alt="photo">
@@ -101,16 +101,16 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                     <i class="fa-solid fa-truck-fast fa-2x"></i></i>
                     <div class="info">
                         <h3>Intervention rapide</h3>
-                        <p>Après avoir détecté le problème, nous agissons très rapidement pour le résoudre une fois pour toutes</p>
+                        <p>Après avoir détecté le problème, nous agissons très rapidement pour le résoudre une fois pour toutes.</p>
                         <span> 4/5 &#11088; &#11088; &#11088; &#11088;</span>
                     </div>
-                    <img src="./Images/intervention-rapid.png" alt="photo">
+                    <img src="./Images/rapid-intervention.png" alt="photo">
                 </div>
                 <div class="box">
                     <i class="fa-solid fa-business-time fa-2x"></i>
                     <div class="info">
                         <h3>Horaire Flexible</h3>
-                        <p>Nous essayons de nous adapter au mieux pour satisfaire nos clients</p>
+                        <p>Nous essayons de nous adapter au mieux pour satisfaire nos clients.</p>
                         <span> 4/5 &#11088; &#11088; &#11088; &#11088;</span>
                     </div>
                     <img src="./Images/horaire-flexible.png" alt="photo">
@@ -119,7 +119,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                     <i class="fa-solid fa-headset fa-2x"></i>
                     <div class="info">
                         <h3>Services Clients</h3>
-                        <p>Nous faisons tout ce que nous pouvons pour répondre à vos questions et tracer votre problème s'il est résolu ou non</p>
+                        <p>Nous faisons tout ce que nous pouvons pour répondre à vos questions et tracer votre problème qu'il soit résolu ou non.</p>
                         <span> 5/5 &#11088; &#11088; &#11088; &#11088; &#11088;</span>
                     </div>
                     <img src="./Images/service-client.png" alt="photo">
@@ -151,24 +151,16 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                 <div class="box">
                     <img class="image-2" src="./Images/about-2.png" alt="" />
                     <div class="content" data-info="div-2">
-                        <h2>Eradication des insectes volantsination</h2>
-                        <p>Ces dernières années ont été marquées
-                            par une importante expansion des
-                            frelons asiatiques,<span class="dots">...</span></span><span class="text-more-less hide" id="Span-2"> des guêpes
-                                et d’insectes s’attaquant aux denrées
-                                stockées.
-                                Connaissant les risques causés
-                                par ces derniers, Walistop Nuisibles
-                                s’engage dans une lutte raisonnée et
-                                efficace en intervant dans les plus brefs
-                                délais.</span></p>
+                        <h2>Eradication des insectes volants</h2>
+                        <p>Ces dernières années ont été marquées par une importante expansion des frelons asiatiques,<span class="dots">...</span></span><span class="text-more-less hide" id="Span-2"> des guêpes et d’insectes s’attaquant aux denrées stockées. Connaissant les risques causés par ces derniers, 
+                            Walistop Nuisibles s’engage dans une lutte raisonnée et efficace en intervenant dans les plus brefs délais.</span></p>
                         <button onclick="readMore('div-2');" class="more-btn">Lire Plus</button>
                     </div>
                 </div>
                 <div class="box">
                     <img class="image-3" src="./Images/about-3.png" alt="" />
                     <div class="content" data-info="div-3">
-                        <h2>Dératiseur professionnel</h2>
+                        <h2>Dératisation professionnel</h2>
                         <p>Vous entendez des bruits dans vos
                             cloisons ? Dans les combles de votre grenier ?
                             Votre jardin,<span class="dots">...</span></span> <span class="text-more-less hide" id="Span-3">et poulailler sont en proie
@@ -176,15 +168,6 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                                 de rats et de souris ? Vos locaux et/ou entrepôts sont pris d’assaut par les rongeurs ? Nos dératiseurs ont les méthodes et l’expertise pour garder la population de rongeurs sous contrôle.</span></p>
                         <button onclick="readMore('div-3');" class="more-btn">Lire Plus</button>
                     </div>
-                </div>
-                <div class="box">
-                    <img class="image-4" src="./Images/time.png" alt="" />
-                    <div class="content" data-info="div-4">
-                        <h2>Horaires d'ouverture</h2>
-                        <p>Pour votre confort nous nous déplaçons à<span class="dots">...</span></span> <span class="text-more-less hide" id="Span-4"> toute heure de la journée et de la soirée.
-                            Pour tout renseignement ou prise de rendez-vous, merci de nous contacter directement au 0658011058 </span></p>
-                            <button onclick="readMore('div-4');" class="more-btn">Lire Plus</button>
-                        </div>
                 </div>
                 <div class="box">
                     <img class="image-1" src="./Images/about-4.png" alt="" />
@@ -210,6 +193,15 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                         <button onclick="readMore('div-6');" class="more-btn">Lire Plus</button>
                     </div>
                 </div>
+                <div class="box">
+                    <img class="image-4" src="./Images/time.png" alt="" />
+                    <div class="content" data-info="div-4">
+                        <h2>Horaires d'ouverture</h2>
+                        <p>Pour votre confort nous nous déplaçons à<span class="dots">...</span></span> <span class="text-more-less hide" id="Span-4"> toute heure de la journée et de la soirée.
+                            Pour tout renseignement ou prise de rendez-vous, merci de nous contacter directement au 0658011058 </span></p>
+                            <button onclick="readMore('div-4');" class="more-btn">Lire Plus</button>
+                        </div>
+                </div>
             </div>
         </div>
         <!-- End About Us -->
@@ -226,59 +218,12 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
             </div>
         </div>
         <!-- End Devis  -->
-        <!--Start Services-->
-        <div class="services">
-            <div class="services-title">
-                <h2>Nos Services</h2>
-                <p>Exterminateur de nuisibles :
-                    dératisation, désinsectisation et désinfection</p>
-            </div>
-            <div class="services-boxs">
-                <div class="services-box">
-                        <span>Lutte nuisibles</span>
-                        <span>Destruction de nuisibles</span>
-                        <span>Traitement mouches</span>
-                        <span>Diagnostic parasitaire</span>
-                        <span>Destruction de nid de frelons asiatique</span>
-                        <span>Destruction de nid de guêpes</span>
-                        <span>Piégeage capture fouine</span>
-                        <span>Désinsectisation</span>
-                        <span>Traitement de punaises de lit</span>
-                        <span>Désinsectisation de puces</span>
-                        <span>Désinsectisation de cafards</span>
-                        <span>Désinsectisation de fourmis</span>
-                        <span>Services Anti Nuisibles</span>
-                        <span>Régulation rongeurs</span>
-                        <span>Désourisation</span>
-                        <span>Protection sous tuils</span>
-                        <span>Traitement des végétaux</span>
-                        <span>Traitement par le chaud/froid</span>
-                        <span>Piégeage de chenilles processionnaires</span>
-                        <span>Désinsectisation moustiques</span>
-                        <span>Effarouchement et protection contre les volatiles</span>
-                        <span>Fumigation</span>
-                        <span>Dératisateur</span>
-                        <span>Désinfection</span>
-                        <span>Désinfection des locaux</span>
-                        <span>Désinfection des bâtiments d'élevage</span>
-                        <span>Désinfection covid 19</span>
-                        <span>Lutte contre rats</span>
-                        <span>Dératisateur</span>
-                        <span>Traitement charpente par injection</span>
-                        <span>Traitement insecte xylophages</span>
-                        <span>Piégeage termites</span>
-                        <span>Traitement capricornes</span>
-                        <span>Traitement vrillettes</span>
-                </div>
-            </div>
-        </div>
-        <!--End Services-->
         <!-- Start Contact -->
         <div class="contact" id="contact">
             <div class="container">
                 <div class="contact-form">
                     <form  >
-                        <h2>Entrez Votre Contact Information</h2>
+                        <h2>Entrez vous Information</h2>
                         <i class="fa-solid fa-user"></i>
                         <input class="user" type="text" name="last-name"  id="last-name" placeholder="Votre Nom" required>
                         <br><br>
@@ -288,17 +233,17 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                         <div class="radio">
                             <i class="fa-solid fa-venus-mars"></i>
                         <input  type="radio" name="genre" id="masculin" value="masculin">Masculin
-                        <input  type="radio" name="genre" id="féminine" value="féminine">Féminine
+                        <input  type="radio" name="genre" id="féminine" value="féminine">Féminin
                         </div>
                         <br><br>
                         <i class="fa-solid fa-envelope"></i>
-                        <input class="mail" type="email" name="mail" id="email" placeholder="Votre Addresse Mail"  required>
+                        <input class="mail" type="email" name="mail" id="email" placeholder="Votre Adresse Mail"  required>
                         <br><br>
                         <i class="fa-solid fa-phone"></i>
                         <input class="phone" type="text" name="phone" id="phone" placeholder="Votre Numéro de Téléphone"  required>
                         <br><br>
                         <i class="fa-solid fa-house"></i>
-                        <input class="address" type="text" id="address" name="address" placeholder="Votre Addresse" >
+                        <input class="address" type="text" id="address" name="address" placeholder="Votre Adresse" >
                         &nbsp;&nbsp;&nbsp;
                         <select id="country" name="country" style="margin: 25px 35px;">
                             <option disabled selected value>-- Choisir Votre Pays --</option>
@@ -318,11 +263,58 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
             </div>
         </div>
         <!-- End Contact -->
+                <!--Start Services-->
+                <div class="services">
+                    <div class="services-title">
+                        <h2>Nos Services</h2>
+                        <p>Exterminateur de nuisibles :
+                            dératisation, désinsectisation et désinfection</p>
+                    </div>
+                    <div class="services-boxs">
+                        <div class="services-box">
+                                <span>Lutte nuisibles</span>
+                                <span>Destruction de nuisibles</span>
+                                <span>Traitement mouches</span>
+                                <span>Diagnostic parasitaire</span>
+                                <span>Destruction de nid de frelons asiatique</span>
+                                <span>Destruction de nid de guêpes</span>
+                                <span>Piégeage capture fouine</span>
+                                <span>Désinsectisation</span>
+                                <span>Traitement de punaises de lit</span>
+                                <span>Désinsectisation de puces</span>
+                                <span>Désinsectisation de cafards</span>
+                                <span>Désinsectisation de fourmis</span>
+                                <span>Services Anti Nuisibles</span>
+                                <span>Régulation rongeurs</span>
+                                <span>Désourisation</span>
+                                <span>Protection sous tuils</span>
+                                <span>Traitement des végétaux</span>
+                                <span>Traitement par le chaud/froid</span>
+                                <span>Piégeage de chenilles processionnaires</span>
+                                <span>Désinsectisation moustiques</span>
+                                <span>Effarouchement et protection contre les volatiles</span>
+                                <span>Fumigation</span>
+                                <span>Dératisateur</span>
+                                <span>Désinfection</span>
+                                <span>Désinfection des locaux</span>
+                                <span>Désinfection des bâtiments d'élevage</span>
+                                <span>Désinfection covid 19</span>
+                                <span>Lutte contre rats</span>
+                                <span>Dératisateur</span>
+                                <span>Traitement charpente par injection</span>
+                                <span>Traitement insecte xylophages</span>
+                                <span>Piégeage termites</span>
+                                <span>Traitement capricornes</span>
+                                <span>Traitement vrillettes</span>
+                        </div>
+                    </div>
+                </div>
+                <!--End Services-->
         <!-- Start Footer -->
         <div class="footer">
             <div class="container">
                 <div class="content">
-                    <img src="./Images/walistop-logo.png" alt="">
+                    <img class="photo" src="./Images/walistop-logo.png" alt="">
                     <p>Vous pouvez nous suivre sur les réseaux sociaux et Nous repondons à toute vos questions</p>
                     <div class="social">
                         <a href="http://facebook.com/" target="_blank"><i class="fa-brands fa-facebook fa-2x"></i></a>
