--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                     </div>
                 </div>
                 <div class="landing-image">
-                    <img src="./Images/walistop-landing.png" alt="landing">
+                    <img src="./Images/haut de lapage a cote de traitement tous nuisible.jpg" alt="landing">
                 </div>
             </div>
         </div>
@@ -149,7 +149,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                     </div>
                 </div>
                 <div class="box">
-                    <img class="image-2" src="./Images/about-2.png" alt="" />
+                    <img class="image-2" src="./Images/guepes.jpg" alt="" />
                     <div class="content" data-info="div-2">
                         <h2>Eradication des insectes volants</h2>
                         <p>Ces dernières années ont été marquées par une importante expansion des frelons asiatiques,<span class="dots">...</span></span><span class="text-more-less hide" id="Span-2"> des guêpes et d’insectes s’attaquant aux denrées stockées. Connaissant les risques causés par ces derniers, 
@@ -158,7 +158,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                     </div>
                 </div>
                 <div class="box">
-                    <img class="image-3" src="./Images/about-3.png" alt="" />
+                    <img class="image-3" src="./Images/Rats.jpg" alt="" />
                     <div class="content" data-info="div-3">
                         <h2>Dératisation professionnel</h2>
                         <p>Vous entendez des bruits dans vos
@@ -170,7 +170,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                     </div>
                 </div>
                 <div class="box">
-                    <img class="image-1" src="./Images/about-4.png" alt="" />
+                    <img class="image-1" src="./Images/Traitement bois.jpg" alt="" />
                     <div class="content" data-info="div-5">
                         <h2>Traitement du bois</h2>
                         <p>Les insectes xylophages (les capricornes de maison, les termites, les vrillettes,
@@ -180,7 +180,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                     </div>
                 </div>
                 <div class="box">
-                    <img class="image-1" src="./Images/about-5.png" alt="" />
+                    <img class="image-1" src="./Images/la desinfection.jpg" alt="" />
                     <div class="content" data-info="div-6">
                         <h2>La désinfection</h2>
                         <p>Suite à un sinistre, ou à une infestation de nuisibles,
@@ -194,7 +194,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                     </div>
                 </div>
                 <div class="box">
-                    <img class="image-4" src="./Images/time.png" alt="" />
+                    <img class="image-4" src="./Images/horaire d'ouverture.jpg" alt="" />
                     <div class="content" data-info="div-4">
                         <h2>Horaires d'ouverture</h2>
                         <p>Pour votre confort nous nous déplaçons à<span class="dots">...</span></span> <span class="text-more-less hide" id="Span-4"> toute heure de la journée et de la soirée.
