--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                 <div class="content">
                     <h2>Traitements de tous nuisibles 7j/7</h2>
                     <p>Votre confort est notre priorité, c'est pourquoi nous intervenons dans le Nord-pas-de-calais, l'Aisne, l'Oise et la Somme 24h/24.
-                        Pour un devis gratuit, contactez-nous direct à <span class="numero">06 58 01 10 58</span></p>
+                        Pour un devis gratuit, contactez-nous direct au <span class="numero">06 58 01 10 58</span></p>
                     <div class="devis">
                         <a href="#devis">Faire un DEVIS</a>
                     </div>
@@ -223,7 +223,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
             <div class="container">
                 <div class="contact-form">
                     <form  >
-                        <h2>Entrez vous Information</h2>
+                        <h2>Entrez Vos Informations</h2>
                         <i class="fa-solid fa-user"></i>
                         <input class="user" type="text" name="last-name"  id="last-name" placeholder="Votre Nom" required>
                         <br><br>
